[gd_scene load_steps=7 format=3 uid="uid://b03bc7ltfhg7l"]

[ext_resource type="Script" path="res://main.gd" id="1_apdsp"]
[ext_resource type="Texture2D" uid="uid://bo7xa410b48x5" path="res://dog.png" id="1_n8wt3"]
[ext_resource type="FontFile" uid="uid://bswqovmbfwoke" path="res://PixelOperator-Bold.ttf" id="2_i3gi0"]

[sub_resource type="Animation" id="Animation_xasah"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.349066]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(245, 37)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("..:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_s77h0"]
resource_name = "move"
length = 3.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.6, 2.4, 3.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.174533, 0.0, -0.174533, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6, 2, 2.4, 2.8, 3.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 1.3), Vector2(1, 1), Vector2(1.3, 1.3), Vector2(1, 1), Vector2(1.3, 1.3), Vector2(1, 1), Vector2(1.3, 1.3), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i7kea"]
_data = {
"RESET": SubResource("Animation_xasah"),
"move": SubResource("Animation_s77h0")
}

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_apdsp")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Score" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -72.5
offset_top = 230.0
offset_right = 72.5
offset_bottom = 271.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_i3gi0")
theme_override_font_sizes/font_size = 40
text = "Score: 0"
horizontal_alignment = 1

[node name="Save" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_right = 100.0
grow_vertical = 0
text = "Save"

[node name="Load" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
text = "Load"

[node name="Dog" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -113.0
offset_right = 320.0
offset_bottom = 313.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(320, 210)
texture_normal = ExtResource("1_n8wt3")
stretch_mode = 5

[node name="TitleContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -395.0
offset_top = 32.0
offset_right = 395.0
offset_bottom = 152.0
grow_horizontal = 2
pivot_offset = Vector2(395, 80)
theme_override_constants/margin_top = 40

[node name="Title" type="Label" parent="TitleContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_i3gi0")
theme_override_font_sizes/font_size = 80
text = "PET THE DOG!!!!!!!!!!!!!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleContainer/Title"]
libraries = {
"": SubResource("AnimationLibrary_i7kea")
}

[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Dog" to="." method="_on_dog_pressed"]
